# skippy

./: .gitignore  Cargo.toml  README.md  build.rs
.misc/: Makefile  README.m4  package-readme.md
misc/: crate-readme.md
src/: basic.rs  common-readme.md  lib.rs  options.rs  persistent_alloc.rs  tests.rs
src/basic/: mod.rs  options.rs  rc.rs  reference.rs
src/list/: alloc.rs  debug.rs  destroy.rs  destroy_safety.rs  insert.rs  iter.rs  mod.rs  remove.rs  split.rs  traverse.rs
src/list/node/: internal.rs  leaf.rs  mod.rs
src/list/node/leaf/: key.rs  mod.rs
tests/: tests.rs
