[package]
name = "skip-list"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

[features]
default = ["std", "allocator-fallback"]
allocator_api = ["allocator-fallback?/allocator_api"]
std = []

[dependencies]
cell-ref = "0.1"
tagged-pointer = "0.2"

[dependencies.allocator-fallback]
version = "0.1.1"
default-features = false
optional = true
