[package]
name = "skippy"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
description = "Highly flexible worst-case O(log n) intrusive skip list"
documentation = "https://docs.rs/skippy"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/skippy"
license = "AGPL-3.0-or-later"
keywords = ["skip-list", "intrusive", "list", "tree"]
categories = ["data-structures", "no-std"]

[features]
default = ["std", "allocator-fallback"]
allocator_api = ["allocator-fallback?/allocator_api"]
std = []

[dependencies]
cell-ref = "0.1"
tagged-pointer = "0.2.4"

[dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true

[build-dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true
