[package]
name = "skippy"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.65"
description = "Highly flexible worst-case O(log n) intrusive skip list"
documentation = "https://docs.rs/skippy"
readme = "misc/crate-readme.md"
repository = "https://github.com/taylordotfish/skippy"
license = "AGPL-3.0-or-later"
keywords = ["skip-list", "intrusive", "list", "tree"]
categories = ["data-structures", "no-std"]

[features]
default = ["std", "allocator-fallback"]
allocator_api = ["allocator-fallback?/allocator_api"]
std = []

[dependencies]
cell-ref = "0.1"
integral_constant = "0.1"
tagged-pointer = "0.2.4"

[dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true

[build-dependencies.allocator-fallback]
version = "0.1.7"
default-features = false
optional = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    "cfg(any_allocator_api)",
    "cfg(has_allocator_api)",
    "cfg(skippy_debug)",
]
